--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=order-service
+spring.application.name=inventory-service
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/order_service
 spring.datasource.username=root
 spring.datasource.password=8963
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-server.port=8081
+server.port=8082
